Continuing to switch from VectorAi/AstraDb to OpenAi/InMemoryDb